@@ -1,3 +1,4 @@
+	* removed mmap_cache feature
 	* strengthened type safety in handling of piece and file indices
 	* deprecate identify_client() and fingerprint type
 	* make sequence number for mutable DHT items backed by std::int64_t
